src/main/java/com/example/DiplomaSite/error/DiplomaAssignmentNotFoundException.java
package com.example.DiplomaSite.error;

public class DiplomaAssignmentNotFoundException extends RuntimeException{
    public DiplomaAssignmentNotFoundException(String message) {
        super(message);
    }
}
